--- a/index.html
+++ b/index.html
@@ -24,5 +24,14 @@
       <img src="image7.jpg" alt="" class="grid-item" />
       <img src="image8.jpg" alt="" class="grid-item" />
     </div>
+
+    <div class="flexpart">
+      <div class="top"><h2>Our Best images.</h2></div>
+      <div class="cardz">
+        <img src="image3.jpg" alt="" class="card" />
+        <img src="image5.jpg" alt="" class="card" />
+        <img src="image2.jpg" alt="" class="card" />
+      </div>
+    </div>
   </body>
 </html>
